--- a/src/Lxna.Core/Lxna.Core.csproj
+++ b/src/Lxna.Core/Lxna.Core.csproj
@@ -1,7 +1,31 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="4.1.4" />
+    <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0005" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\refs\Omnix\src\Omnix.Base\Omnix.Base.csproj" />
+    <ProjectReference Include="..\..\refs\Omnix\src\Omnix.Collections\Omnix.Collections.csproj" />
+    <ProjectReference Include="..\..\refs\Omnix\src\Omnix.Configuration\Omnix.Configuration.csproj" />
+    <ProjectReference Include="..\..\refs\Omnix\src\Omnix.Cryptography\Omnix.Cryptography.csproj" />
+    <ProjectReference Include="..\..\refs\Omnix\src\Omnix.Io\Omnix.Io.csproj" />
+    <ProjectReference Include="..\..\refs\Omnix\src\Omnix.Network\Omnix.Network.csproj" />
+    <ProjectReference Include="..\..\refs\Omnix\src\Omnix.Serialization.RocketPack\Omnix.Serialization.RocketPack.csproj" />
+    <ProjectReference Include="..\..\refs\Omnix\src\Omnix.Serialization\Omnix.Serialization.csproj" />
+    <ProjectReference Include="..\Lxna.Messages\Lxna.Messages.csproj" />
+    <ProjectReference Include="..\Lxna.Rpc\Lxna.Rpc.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Contents\_RocketPack\" />
+  </ItemGroup>
 
 </Project>
