--- a/src/Lxna.Gui.Mobile.Android/Properties/AndroidManifest.xml
+++ b/src/Lxna.Gui.Mobile.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Lxna.Gui.Mobile">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
     <application android:label="Lxna.Gui.Mobile.Android"></application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
