--- a/src/Lxna.Gui.Desktop/Lxna.Gui.Desktop.csproj
+++ b/src/Lxna.Gui.Desktop/Lxna.Gui.Desktop.csproj
@@ -15,16 +15,20 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.8.0" />
-    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.8.0" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.8.0" />
-    <PackageReference Include="Avalonia.Skia" Version="0.8.0" />
+    <PackageReference Include="Avalonia" Version="0.8.1" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.8.1" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.8.1" />
+    <PackageReference Include="Avalonia.Skia" Version="0.8.1" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.8.0" />
     <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.8.0" />
     <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.8.0" />
-    <PackageReference Include="ReactiveProperty" Version="5.4.0" />
+    <PackageReference Include="ReactiveProperty" Version="5.6.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\refs\omnix\src\Omnix.Avalonia\Omnix.Avalonia.csproj" />
     <ProjectReference Include="..\Lxna.Core\Lxna.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="NLog" Version="4.6.6" />
   </ItemGroup>
 </Project>
