--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,22 +5,28 @@
 
   <PropertyGroup>
     <LangVersion>8.0</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <NoWarn>CS1591,CS1998,NU5105</NoWarn>
   </PropertyGroup>
 
+  <!--
   <PropertyGroup>  
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-    <RestoreLockedMode Condition=" '$(ContinuousIntegrationBuild)' == 'true' " >true</RestoreLockedMode>
+    <RestoreLockedMode>true</RestoreLockedMode>
+    <NoWarn>NU1603</NoWarn>
+    <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
   </PropertyGroup>
+  -->
 
   <PropertyGroup>
     <RootNamespace>$(ProjectName)</RootNamespace>
     <Title>$(ProjectName)</Title>
     <Description>$(ProjectName)</Description>
     <BuildVersion>1</BuildVersion>
-    <VersionPrefix>0.0.2</VersionPrefix>
+    <VersionPrefix>0.0.1</VersionPrefix>
     <VersionSuffix>-alpha</VersionSuffix>
     <Version>$(VersionPrefix)$(VersionSuffix).$(BuildVersion)</Version>
     <AssemblyVersion>$(VersionPrefix).$(BuildVersion)</AssemblyVersion>
@@ -29,7 +35,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/omnius-labs/lxna</PackageProjectUrl>
     <RepositoryUrl>https://github.com/omnius-labs/lxna</RepositoryUrl>
-    <PackageTags>Lxna</PackageTags>
+    <PackageTags>lxna</PackageTags>
     <Copyright>Copyright (c) 2019 Lyrise</Copyright>
     <RepositoryType>git</RepositoryType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -41,12 +47,15 @@
   <!-- Autodetect platform -->
   <PropertyGroup Condition=" '$(OS)' != 'Unix' ">
     <NativeDepsPlatform>Windows</NativeDepsPlatform>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(OS)' == 'Unix' And Exists('/Applications') And Exists('/Library') And Exists('/System') ">
     <NativeDepsPlatform>Mac</NativeDepsPlatform>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(OS)' == 'Unix' And '$(NativeDepsPlatform)' == '' ">
     <NativeDepsPlatform>Linux</NativeDepsPlatform>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
     
   <PropertyGroup Condition=" '$(NativeDepsPlatform)' == 'Windows' ">
@@ -68,11 +77,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="4.6.5" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="NLog" Version="4.6.7" />
   </ItemGroup>
   
 </Project>
