--- a/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
+++ b/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.3" />
     <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.9.3" />
     <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.9.3" />
+    <PackageReference Include="NLog.Config" Version="4.6.8" />
     <PackageReference Include="ReactiveProperty" Version="6.2.0" />
   </ItemGroup>
   <ItemGroup>
