--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <PropertyGroup>
     <LangVersion>preview</LangVersion>
@@ -15,7 +15,7 @@
   <PropertyGroup>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     <RestoreLockedMode>true</RestoreLockedMode>
-    <NoWarn>NU1604</NoWarn>
+    <NoWarn>NU1603</NoWarn>
     <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
   </PropertyGroup>
   -->
@@ -25,15 +25,15 @@
     <Title>$(ProjectName)</Title>
     <Description>$(ProjectName)</Description>
     <FileVersion>$(AssemblyVersion)</FileVersion>
-    <BuildVersion>2</BuildVersion>
-    <VersionPrefix>1.0.1</VersionPrefix>
+    <BuildVersion>1</BuildVersion>
+    <VersionPrefix>0.0.1</VersionPrefix>
     <VersionSuffix>-alpha</VersionSuffix>
     <Version>$(VersionPrefix)$(VersionSuffix).$(BuildVersion)</Version>
     <AssemblyVersion>$(VersionPrefix).$(BuildVersion)</AssemblyVersion>
     <Authors>Lyrise</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/omnius-labs/lxna</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/omnius-labs/lxna</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/omnius-labs/Lxna</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/omnius-labs/Lxna</RepositoryUrl>
     <PackageTags>Lxna</PackageTags>
     <Copyright>Copyright (c) 2019 Lyrise</Copyright>
     <RepositoryType>git</RepositoryType>
