--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-
   <Import Project="..\Directory.Build.props" Condition="Exists('..\Directory.Build.props')" />
-
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>$(MSBuildProjectName).Tests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(Configuration)' != 'Release' ">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+  <PropertyGroup Condition=" '$(Configuration)' != 'Release' ">
+    <CodeAnalysisRuleSet>../../style.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
 </Project>
