--- a/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
+++ b/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
@@ -6,19 +6,38 @@
     <OutputPath>C:\home\repos\omnius-labs\Lxna\tmp\bin\win\Omnius.Lxna.Ui.Desktop\Debug\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
   <ItemGroup>
+    <AvaloniaXaml Remove="Models\**" />
+    <Compile Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.9.12" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.12" />
     <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.9.12" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.12" />
     <PackageReference Include="Avalonia.Skia" Version="0.9.12" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.12" />
     <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.9.12" />
     <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.9.12" />
-    <PackageReference Include="NLog" Version="4.7.4" />
-    <PackageReference Include="NLog.Config" Version="4.7.4" />
+    <PackageReference Include="NLog" Version="4.7.5" />
+    <PackageReference Include="NLog.Config" Version="4.7.5" />
     <PackageReference Include="ReactiveProperty" Version="7.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\refs\core\src\Omnius.Core.Collections\Omnius.Core.Collections.csproj" />
+    <ProjectReference Include="..\..\refs\core\src\Omnius.Core.Cryptography\Omnius.Core.Cryptography.csproj" />
+    <ProjectReference Include="..\..\refs\core\src\Omnius.Core.Io\Omnius.Core.Io.csproj" />
+    <ProjectReference Include="..\..\refs\core\src\Omnius.Core.Network\Omnius.Core.Network.csproj" />
+    <ProjectReference Include="..\..\refs\core\src\Omnius.Core.RocketPack.Remoting\Omnius.Core.RocketPack.Remoting.csproj" />
+    <ProjectReference Include="..\..\refs\core\src\Omnius.Core.RocketPack\Omnius.Core.RocketPack.csproj" />
+    <ProjectReference Include="..\..\refs\core\src\Omnius.Core.Serialization\Omnius.Core.Serialization.csproj" />
+    <ProjectReference Include="..\..\refs\core\src\Omnius.Core\Omnius.Core.csproj" />
+    <ProjectReference Include="..\Omnius.Lxna.Components\Omnius.Lxna.Components.csproj" />
+    <ProjectReference Include="..\Omnius.Lxna.Components.Implementations\Omnius.Lxna.Components.Implementations.csproj" />
   </ItemGroup>
 </Project>
