--- a/test/Omnius.Lxna.Components.Tests/Omnius.Lxna.Components.Tests.csproj
+++ b/test/Omnius.Lxna.Components.Tests/Omnius.Lxna.Components.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Omnius.Lxna.Components.Impls\Omnius.Lxna.Components.Impls.csproj" />
+    <ProjectReference Include="..\..\src\Omnius.Lxna.Components.Implementations\Omnius.Lxna.Components.Implementations.csproj" />
     <ProjectReference Include="..\..\src\Omnius.Lxna.Components\Omnius.Lxna.Components.csproj" />
   </ItemGroup>
 
