--- a/src/Omnius.Lxna.Components.Implementations/Omnius.Lxna.Components.Implementations.csproj
+++ b/src/Omnius.Lxna.Components.Implementations/Omnius.Lxna.Components.Implementations.csproj
@@ -2,12 +2,14 @@
 
   <PropertyGroup>
     <RootNamespace>Omnius.Lxna.Components</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.9" />
     <PackageReference Include="NLog" Version="4.7.5" />
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.22.0" />
+    <PackageReference Include="SevenZipExtractor" Version="1.0.15" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.1" />
   </ItemGroup>
 
