--- a/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
+++ b/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
@@ -14,17 +14,17 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.9.12" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.12" />
-    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.9.12" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.12" />
-    <PackageReference Include="Avalonia.Skia" Version="0.9.12" />
-    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.12" />
-    <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.9.12" />
-    <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.9.12" />
-    <PackageReference Include="NLog" Version="4.7.5" />
-    <PackageReference Include="NLog.Config" Version="4.7.5" />
-    <PackageReference Include="ReactiveProperty" Version="7.5.1" />
+    <PackageReference Include="Avalonia" Version="0.10.0-rc2" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0-rc2" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.10.0-rc2" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.0-rc2" />
+    <PackageReference Include="Avalonia.Skia" Version="0.10.0-rc2" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.0-rc2" />
+    <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.10.0-rc2" />
+    <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.10.0-rc2" />
+    <PackageReference Include="NLog" Version="4.7.7" />
+    <PackageReference Include="NLog.Config" Version="4.7.7" />
+    <PackageReference Include="ReactiveProperty" Version="7.6.1" />
     <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
   </ItemGroup>
 
