--- a/src/Omnius.Lxna.Components.Implementations/Omnius.Lxna.Components.Implementations.csproj
+++ b/src/Omnius.Lxna.Components.Implementations/Omnius.Lxna.Components.Implementations.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(RootNamespace).Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.10" />
     <PackageReference Include="NLog" Version="4.7.7" />
     <PackageReference Include="SevenZipExtractor" Version="1.0.15" />
