Impl とりあえず動作するところまで実装

--- a/src/Omnius.Lxna.Ui.Desktop/NLog.config
+++ b/src/Omnius.Lxna.Ui.Desktop/NLog.config
@@ -6,7 +6,7 @@
    <target
       name="logconsole"
       xsi:type="Console"
-      layout="${longdate} [${threadid:padding=8}] [${uppercase:${level:padding=-5}}] ${callsite}()${newline}${message}${newline}${exception:format=tostring}" />
+      layout="${longdate} [${threadid}] [${uppercase:${level}}] ${callsite}()${newline}${message}${newline}${exception:format=tostring}" />
   </targets>
 
   <rules>
