--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - USER_ID=${UID}
-        - GROUP_ID=${GID}
+        - LOCAL_UID=${UID}
+        - LOCAL_GID=${GID}
     container_name: devenv
     volumes:
       - ../../:/work
