--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+name: Test
 
 on: [push]
 
@@ -18,12 +18,12 @@ jobs:
         run: dotnet tool restore
       - name: format-check
         run: dotnet format --check
-      - name: Install dependencies
-        run: dotnet restore
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-      - name: Test
-        run: dotnet test --no-restore --verbosity normal --filter "FullyQualifiedName~Omnius.Lxna"
+      # - name: Install dependencies
+      #   run: dotnet restore
+      # - name: Build
+      #   run: dotnet build --configuration Release --no-restore
+      # - name: Test
+      #   run: dotnet test --no-restore --verbosity normal --filter "FullyQualifiedName~Omnius.Xeus"
   windows:
     runs-on: windows-latest
     steps:
@@ -40,4 +40,4 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        run: dotnet test --no-restore --verbosity normal --filter "FullyQualifiedName~Omnius.Lxna"
+        run: dotnet test --no-restore --verbosity normal --filter "FullyQualifiedName~Omnius.Xeus"
