--- a/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
+++ b/src/Omnius.Lxna.Ui.Desktop/Omnius.Lxna.Ui.Desktop.csproj
@@ -19,24 +19,25 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="0.10.8" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.8" />
-    <PackageReference Include="Avalonia.Skia" Version="0.10.8" />
-    <PackageReference Include="Avalonia.Svg.Skia" Version="0.10.8" />
-    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.8" />
-    <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.10.8" />
-    <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.10.8" />
-    <PackageReference Include="Avalonia" Version="0.10.8" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.12" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.12" />
+    <PackageReference Include="Avalonia.Skia" Version="0.10.12" />
+    <PackageReference Include="Avalonia.Svg.Skia" Version="0.10.12" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.12" />
+    <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.10.12" />
+    <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.10.12" />
+    <PackageReference Include="Avalonia" Version="0.10.12" />
     <PackageReference Include="Citrus.Avalonia" Version="1.5.1" />
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="Generator.Equals" Version="2.2.3" />
     <PackageReference Include="GitInfo" Version="2.2.0" />
-    <PackageReference Include="Material.Avalonia" Version="2.5.0" />
+    <PackageReference Include="Material.Avalonia" Version="3.0.0-rc0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="NLog.Config" Version="4.7.13" />
     <PackageReference Include="NLog" Version="4.7.13" />
     <PackageReference Include="ReactiveProperty" Version="8.0.3" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
+    <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.9.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -50,6 +51,7 @@
     <ProjectReference Include="..\..\refs\core\src\Omnius.Core.Utils\Omnius.Core.Utils.csproj" />
     <ProjectReference Include="..\..\refs\core\src\Omnius.Core.Avalonia\Omnius.Core.Avalonia.csproj" />
     <ProjectReference Include="..\Omnius.Lxna.Components\Omnius.Lxna.Components.csproj" />
+    <ProjectReference Include="..\Omnius.Lxna.Intaractors\Omnius.Lxna.Intaractors.csproj" />
   </ItemGroup>
 
   <ItemGroup>
