--- a/src/Omnius.Lxna.Components/Omnius.Lxna.Components.csproj
+++ b/src/Omnius.Lxna.Components/Omnius.Lxna.Components.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.11" />
     <PackageReference Include="NLog" Version="4.7.10" />
-    <PackageReference Include="SevenZipExtractor" Version="1.0.15" />
+    <PackageReference Include="SharpCompress" Version="0.30.1" />
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="10.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="2.0.0" />
   </ItemGroup>
