--- a/src/Omnius.Lxna.Components/Omnius.Lxna.Components.csproj
+++ b/src/Omnius.Lxna.Components/Omnius.Lxna.Components.csproj
@@ -11,11 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="LiteDB" Version="5.0.11" />
-    <PackageReference Include="NLog" Version="4.7.10" />
-    <PackageReference Include="SharpCompress" Version="0.30.1" />
-    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="10.0.0" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="2.0.0" />
+    <PackageReference Include="NLog" />
+    <PackageReference Include="LiteDB" />
+    <PackageReference Include="SharpCompress" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" />
+    <PackageReference Include="SixLabors.ImageSharp" />
   </ItemGroup>
 
   <ItemGroup>
