--- a/src/Omnius.Lxna.Ui.Desktop/Properties/launchSettings.json
+++ b/src/Omnius.Lxna.Ui.Desktop/Properties/launchSettings.json
@@ -1,9 +1,9 @@
 {
-  "profiles": {
-    "Omnius.Lxna.Ui.Desktop": {
-      "commandName": "Project",
-      "commandLineArgs": "\"-s\" \"./storage\" \"-v\" \"true\"",
-      "workingDirectory": "../../demo/ui-desktop"
+    "profiles": {
+        "Omnius.Lxna.Ui.Desktop": {
+            "commandLineArgs": "\"-s\" \"./storage\" \"-v\" \"true\"",
+            "commandName": "Project",
+            "workingDirectory": "../../demo"
+        }
     }
-  }
 }
