--- a/lock/Omnius.Lxna.Components.json
+++ b/lock/Omnius.Lxna.Components.json
@@ -285,6 +285,7 @@
         "dependencies": {
           "NLog": "[4.7.15, )",
           "Omnius.Core": "[0.0.1-alpha.1, )",
+          "Omnius.Core.Collections": "[0.0.1-alpha.1, )",
           "Omnius.Core.Pipelines": "[0.0.1-alpha.1, )"
         }
       },
@@ -307,6 +308,13 @@
         }
       },
       "omnius.core.tasks": {
+        "type": "Project",
+        "dependencies": {
+          "NLog": "[4.7.15, )",
+          "Omnius.Core": "[0.0.1-alpha.1, )"
+        }
+      },
+      "omnius.core.text": {
         "type": "Project",
         "dependencies": {
           "NLog": "[4.7.15, )",
