--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,38 +3,44 @@ name: test
 on:
   push:
     branches:
-      - "**"
+      - "main"
+      - "releases/*"
     paths:
       - "**"
       - "!/docs/**"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  StableTest: true
+  ContinuousIntegrationBuild: true
+
 jobs:
   linux:
     runs-on: ubuntu-latest
-    env:
-      ContinuousIntegrationBuild: true
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
         with:
           submodules: "recursive"
+      - name: Install dependencies (lib)
+        run: sudo apt-get install libsnappy-dev
       - name: Setup dotnet
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 6.0.x
-          include-prerelease: true
+          dotnet-version: 7.0.x
       - name: Setup dotnet tool
         run: dotnet tool restore
-      - name: format check
-        run: dotnet format --verify-no-changes
       - name: Install dependencies
         run: dotnet restore
+      - name: format check
+        run: dotnet format --verify-no-changes
       - name: Test
-        run: dotnet test --no-restore --filter "FullyQualifiedName~Omnius.Lxna"
+        run: dotnet test --no-restore
   windows:
     runs-on: windows-latest
-    env:
-      ContinuousIntegrationBuild: true
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
@@ -43,9 +49,8 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 6.0.x
-          include-prerelease: true
+          dotnet-version: 7.0.x
       - name: Install dependencies
         run: dotnet restore
       - name: Test
-        run: dotnet test --no-restore --filter "FullyQualifiedName~Omnius.Lxna"
+        run: dotnet test --no-restore
