--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,50 +2,38 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "design-ui-desktop (win)",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "design-build",
-            "program": "${workspaceFolder}/tmp/bin/win-vscode-design/Omnius.Lxna.Ui.Desktop/Debug/net7.0/Omnius.Lxna.Ui.Desktop.dll",
-            "cwd": "${workspaceFolder}/demo",
-            "args": ["-d", "Main"],
-            "console": "internalConsole",
-            "stopAtEntry": false
-        },
-        {
-            "name": "design-ui-desktop (linux)",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "design-build",
-            "program": "${workspaceFolder}/tmp/bin/linux-vscode-design/Omnius.Lxna.Ui.Desktop/Debug/net7.0/Omnius.Lxna.Ui.Desktop.dll",
-            "cwd": "${workspaceFolder}/demo",
-            "args": ["-d", "Main"],
-            "envFile": "${workspaceFolder}/.env",
-            "console": "internalConsole",
-            "stopAtEntry": false
-        },
-        {
-            "name": "ui-desktop (win)",
+            "name": "ui-desktop",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/tmp/bin/win-vscode/Omnius.Lxna.Ui.Desktop/Debug/net7.0/Omnius.Lxna.Ui.Desktop.dll",
             "args": ["-s", "./storage", "-v", "true"],
             "cwd": "${workspaceFolder}/demo",
             "stopAtEntry": false,
-            "console": "internalConsole"
+            "console": "internalConsole",
+            "windows": {
+                "program": "${workspaceFolder}/tmp/bin/win-vscode/Omnius.Lxna.Ui.Desktop/Debug/net7.0/Omnius.Lxna.Ui.Desktop.dll"
+            },
+            "linux": {
+                "program": "${workspaceFolder}/tmp/bin/linux-vscode/Omnius.Lxna.Ui.Desktop/Debug/net7.0/Omnius.Lxna.Ui.Desktop.dll",
+                "envFile": "${workspaceFolder}/.env"
+            }
         },
         {
-            "name": "ui-desktop (linux)",
+            "name": "design-ui-desktop",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/tmp/bin/linux-vscode/Omnius.Lxna.Ui.Desktop/Debug/net7.0/Omnius.Lxna.Ui.Desktop.dll",
-            "args": ["-s", "./storage", "-v", "true"],
-            "envFile": "${workspaceFolder}/.env",
+            "preLaunchTask": "design-build",
             "cwd": "${workspaceFolder}/demo",
+            "args": ["-d", "Main"],
+            "console": "internalConsole",
             "stopAtEntry": false,
-            "console": "internalConsole"
+            "windows": {
+                "program": "${workspaceFolder}/tmp/bin/win-vscode-design/Omnius.Lxna.Ui.Desktop/Debug/net7.0/Omnius.Lxna.Ui.Desktop.dll"
+            },
+            "linux": {
+                "program": "${workspaceFolder}/tmp/bin/linux-vscode-design/Omnius.Lxna.Ui.Desktop/Debug/net7.0/Omnius.Lxna.Ui.Desktop.dll",
+                "envFile": "${workspaceFolder}/.env"
+            }
         }
     ]
 }
