--- a/test/Omnius.Lxna.Components.Tests/Omnius.Lxna.Components.Tests.csproj
+++ b/test/Omnius.Lxna.Components.Tests/Omnius.Lxna.Components.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\refs\core\src\Omnius.Core.UnitTestToolkit\Omnius.Core.UnitTestToolkit.csproj" />
+    <ProjectReference Include="..\..\refs\core-cs\src\Omnius.Core.UnitTestToolkit\Omnius.Core.UnitTestToolkit.csproj" />
     <ProjectReference Include="..\..\src\Omnius.Lxna.Components\Omnius.Lxna.Components.csproj" />
   </ItemGroup>
 
