--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "dotnet.defaultSolution": "lxna.sln",
     "cSpell.words": [
+        "Avalonia",
         "Bootstrapper",
-        "Magick"
+        "lxna",
+        "Magick",
+        "Omnius"
     ],
-    "rust-analyzer.enable" : false,
+    "rust-analyzer.checkOnSave" : false,
 }
