--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,10 @@
             "linux": {
                 "program": "${workspaceFolder}/tmp/bin/linux-vscode/Omnius.Lxna.Ui.Desktop/Debug/net8.0/Omnius.Lxna.Ui.Desktop.dll",
                 "envFile": "${workspaceFolder}/.env"
+            },
+            "osx": {
+                "program": "${workspaceFolder}/tmp/bin/osx-vscode/Omnius.Lxna.Ui.Desktop/Debug/net8.0/Omnius.Lxna.Ui.Desktop.dll",
+                "envFile": "${workspaceFolder}/.env"
             }
         },
         {
@@ -34,6 +38,10 @@
             },
             "linux": {
                 "program": "${workspaceFolder}/tmp/bin/linux-vscode-design/Omnius.Lxna.Ui.Desktop/Debug/net8.0/Omnius.Lxna.Ui.Desktop.dll",
+                "envFile": "${workspaceFolder}/.env"
+            },
+            "osx": {
+                "program": "${workspaceFolder}/tmp/bin/osx-vscode-design/Omnius.Lxna.Ui.Desktop/Debug/net8.0/Omnius.Lxna.Ui.Desktop.dll",
                 "envFile": "${workspaceFolder}/.env"
             }
         }
